<resources>
    <string name="app_name">Android Academy 2020</string>
    <string name="hello_world">Hello World!</string>
    <string name="back">Back</string>
    <string name="age">13+</string>
    <string name="avengers_end_game">Avengers:\nEnd Game</string>
    <string name="tag">Action, Adventure, Fantasy</string>
    <string name="reviews">125 REVIEWS</string>
    <string name="storyline">Storyline</string>
    <string name="storyline_text">"After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos' actions and restore balance to the universe."</string>
    <string name="cast">Cast</string>
    <string name="downey">Robert\nDowney Jr.</string>
    <string name="evans">Chris\nEvans</string>
    <string name="ruffalo">Mark\nRuffalo</string>
    <string name="hemsworth">Chris\nHemsworth</string>
</resources>